<resources>
    <string name="app_name">MultiShrink</string>
    <string name="title_activity_selector">Shrink it!</string>
    <string name="title_activity_settings">Settings</string>

    <string name="caption_job_size_template">%s IMAGES</string>
    <string name="caption_job_size_template_single">%s IMAGE</string>
    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_test">testActivity</string>
    <string name="pref_header_images">Image Preferences</string>
    <!--Actual preferences start here-->

    <string name="pref_cat_images">Image Settings</string>
    <string name="pref_cat_storage">Storage</string>
    <string name="pref_cat_gallery">Gallery</string>
    <string name="pref_gallery_order">Gallery Order</string>
    <string name="share_button">share button</string>
    <string name="redo_button">redo button</string>
    <string name="more_button">more button</string>
    <string name="placeholder_timestamp">31/11/2017 11:59 PM</string>
    <string name="placeholder_image_count">4 Images</string>
    <string name="caption_quality">Quality</string>
    <string-array name="pref_image_size_values">
        <item>320</item>
        <item>640</item>
        <item>800</item>
        <item>1024</item>
        <item>1280</item>
        <item>1536</item>
        <item>1600</item>
        <item>2048</item>
    </string-array>

    <string-array name="pref_image_size_names">
        <item>320x240</item>
        <item>640x480</item>
        <item>800x600</item>
        <item>1024x768</item>
        <item>1280x960</item>
        <item>1536x1180</item>
        <item>1600x1200</item>
        <item>2048x1536</item>
    </string-array>

    <string-array name="pref_output_format_values">
        <item>*</item>
        <item>JPG</item>
        <item>PNG</item>
    </string-array>

    <string-array name="pref_output_format_names">
        <item>Same as Input</item>
        <item>JPG</item>
        <item>PNG</item>
    </string-array>

    <string-array name="pref_gallery_groupby_names">
        <item>Earliest first</item>
        <item>Latest first</item>
    </string-array>

    <string-array name="pref_gallery_groupby_values">
        <item>DateA</item>
        <item>DateD</item>
    </string-array>


</resources>
